--- a/game-library.html
+++ b/game-library.html
@@ -55,7 +55,7 @@
     <!-- Header with carousel -->
     <header class="container">
         <div class="row">
-            <div class="col-12 col-xl-6">Game library intro text section</div>
+            <div class="col-12 col-xl-6">Boardwalk Games intro section</div>
             <div class="col-12 col-xl-6">Carousel</div>
         </div>
     </header>
